style: add fixed scrollbar

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -20,4 +20,5 @@
 html {
   font-family: sans-serif;
   font-size: 10px;
+  overflow-y: scroll;
 }
